<resources>
    <string name="app_name">create_account</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_in">sing in to access your account</string>
    <string name="remember">Remember me</string>
    <string name="forget_password">Forget password?</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Password</string>
    <string name="get_started">Get Started</string>
    <string name="create_free">by creating a free account</string>
    <string name="terms_conditions">By checking the box you agree to our Terms and Conditions.</string>
    <string name="valid_email">Valid email</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="strong_password">Strong Password</string>
    <string name="new_member">New Member?</string>
    <string name="register_now">Register now</string>
    <string name="already_member">Already a member?</string>
    <string name="log_in">Log in</string>
    <string name="next">Next ></string>
    <string name="recipe_img">Recipe image</string>
    <string name="like_img">Like image</string>
    <string name="share_img">Share image</string>
    <string name="logout">Logout</string>
    <string name="fragment_a">Fragment A</string>
    <string name="fragment_b">Fragment B</string>
    <string name="toggle_fragment">Toggle fragment</string>

</resources>