<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <ImageView
        android:id="@+id/imageViewGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/undraw_adventure_map_hnin_2" />

    <TextView
        android:id="@+id/textViewGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="125dp"
        android:text="@string/get_started"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="@+id/imageViewGetStarted"
        app:layout_constraintTop_toTopOf="@+id/imageViewGetStarted" />

    <TextView
        android:id="@+id/textViewByCreating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="170dp"
        android:text="@string/create_free"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/imageViewGetStarted"
        app:layout_constraintTop_toTopOf="@+id/imageViewGetStarted" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editFullNameLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/full_name"
        app:endIconDrawable="@drawable/ic_user"
        app:endIconMode="custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewGetStarted">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputFullName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:padding="14dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editValidEmailLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="0dp"
        android:hint="@string/valid_email"
        app:endIconDrawable="@drawable/ic_mail"
        app:endIconMode="custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFullNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:padding="14dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editPhoneNumberLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="0dp"
        android:hint="@string/phone_number"
        android:inputType="text"
        app:endIconDrawable="@drawable/ic_phone"
        app:endIconMode="custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editValidEmailLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:padding="14dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editStrongPasswordLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="0dp"
        android:hint="@string/strong_password"
        android:inputType="text"
        app:endIconDrawable="@drawable/ic_lock"
        app:endIconMode="custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPhoneNumberLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputStrongPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:padding="14dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkboxTermsConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="0dp"
        android:text="@string/terms_conditions"
        android:textSize="9sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editStrongPasswordLayout" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNext"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="57dp"
        android:backgroundTint="@color/purple"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textViewAlreadyMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="5dp"
        android:text="@string/already_member"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNext" />


    <TextView
        android:id="@+id/labelLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/log_in"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/textViewAlreadyMember"
        app:layout_constraintTop_toBottomOf="@+id/buttonNext" />


</androidx.constraintlayout.widget.ConstraintLayout>